--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,8 @@ jobs:
     - name: Manual install
       run: |
         set -eux -o pipefail
-        curl -fsSL "https://github.com/lima-vm/lima/releases/download/v0.23.1/lima-0.23.1-Darwin-x86_64.tar.gz" | tar Cxzvm /usr/local
+        # curl -fsSL "https://github.com/lima-vm/lima/releases/download/v0.23.1/lima-0.23.1-Darwin-x86_64.tar.gz" | tar Cxzvm /usr/local
+        make all install
         unset LIMA_HOME
         env
         ls -la
