--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,9 @@ jobs:
     #   with:
     #    template: https://raw.githubusercontent.com/lima-vm/lima/${{ matrix.oldver }}/examples/ubuntu-lts.yaml
     - name: Install test dependencies
-      run: brew install qemu bash coreutils
+      run: |
+        brew install bash coreutils
+        brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/13950206061360b5207eaffaa49cd3fd3c7dcab0/Formula/q/qemu.rb
     - name: Uninstall lima
       run: |
         set -eux -o pipefail
@@ -49,11 +51,10 @@ jobs:
     - name: Manual install
       run: |
         set -eux -o pipefail
-        # curl -fsSL "https://github.com/lima-vm/lima/releases/download/v0.23.1/lima-0.23.1-Darwin-x86_64.tar.gz" | tar Cxzvm /usr/local
-        make all install
-        unset LIMA_HOME
+        curl -fsSL "https://github.com/lima-vm/lima/releases/download/v0.23.1/lima-0.23.1-Darwin-x86_64.tar.gz" | tar Cxzvm /usr/local
+        # make all install
         env
-        ls -la
+        qemu-system-x86_64 --version
         limactl --version
         limactl start --tty=false --log-level=debug
         limactl shell default cat /etc/os-release
