--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ env:
 jobs:
   upgrade:
     name: "Upgrade test"
-    runs-on: macos-12
+    runs-on: macos-13
     timeout-minutes: 120
     strategy:
       matrix:
@@ -39,10 +39,10 @@ jobs:
     - name: Install test dependencies
       run: |
         set -eux -o pipefail
-        brew install bash coreutils
-        brew tap-new lima/qemu
-        brew extract --version=8.2.2 qemu lima/qemu
-        brew install lima/qemu/qemu@8.2.2
+        brew install bash coreutils qemu
+        # brew tap-new lima/qemu
+        # brew extract --version=8.2.2 qemu lima/qemu
+        # brew install lima/qemu/qemu@8.2.2
     - name: Uninstall lima
       run: |
         set -eux -o pipefail
