--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,28 +1,12 @@
 name: test
 
 on:
-  push:
-    branches:
-    - master
-    - 'release/**'
-    paths-ignore:
-    - "docs/**"
-    - "website/**"
-    - "**.md"
   pull_request:
-    paths-ignore:
-    - "docs/**"
-    - "website/**"
-    - "**.md"
-env:
-  LIMACTL_CREATE_ARGS: ""
 
 jobs:
   upgrade:
     name: "Upgrade test"
     runs-on: macos-12
-    permissions:
-      packages: read
     timeout-minutes: 120
     strategy:
       matrix:
@@ -42,28 +26,33 @@ jobs:
       run: |
         set -eux -o pipefail
         brew install bash coreutils
-        # brew tap-new lima/qemu
-        # brew extract --version=8.2.1 qemu lima/qemu
-        # brew install lima/qemu/qemu@8.2.1
-        curl -L -o qemu-8.2.1.monterey.bottle.tar.gz \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            https://ghcr.io/v2/homebrew/core/qemu/blobs/sha256:41c77f6bac3e8c1664c665fbe2b19b19ee9da57f8e1ad6697348286710cc3575
-        head -c 200 qemu-8.2.1.monterey.bottle.tar.gz | hexdump -C
-        tar tvfz ./qemu-8.2.1.monterey.bottle.tar.gz
-        brew install --ignore-dependencies ./qemu-8.2.1.monterey.bottle.tar.gz
-    - name: Uninstall lima
-      run: |
-        set -eux -o pipefail
-        brew uninstall --ignore-dependencies --force lima
-        rm -rf ~/.lima
-        rm -rf ~/Library/Caches/lima
-    # - name: Test
-    #   run: ./hack/test-upgrade.sh ${{ matrix.oldver }} ${{ github.sha }}
+        brew tap-new lima/qemu
+        brew_install_version() {
+            FORMULA=$1
+            VERSION=$2
+            TAP=lima/qemu
+            # Extract formula to local tap (this will strip the bottle info)
+            EXTRACT=$(brew extract --verbose --force --version "$VERSION" "$FORMULA" "$TAP")
+            # Get the commit id for this version
+            SHA=$(perl -ne 'print $1 if /from revision ([0-9a-f]+) to/' <<<"$EXTRACT")
+            # File path of the extracted formula
+            OUTPUT="$(brew --repo "$TAP")/Formula/${FORMULA}@${VERSION}.rb"
+            # Get versioned class name of extracted formula
+            AT=$(perl -ne 'print $1 if /^class (\w+AT\w+) < Formula/' "$(brew formula "$OUTPUT")")
+            # Find the location of the formula inside the homebrew-core, 'Formula/?/$FORMULA'
+            FILE=$(brew formula "$FORMULA" | sed 's#^.*/homebrew-core/##')
+            REPO=$(brew --repo homebrew/homebrew-core)
+            # Overwrite the formula with the original one including bottle info
+            git -C "$REPO" show "$SHA:$FILE" >"$OUTPUT"
+            # Replace class name with versioned class name
+            perl -p -i -e "s/class \w+ < Formula/class $AT < Formula/" "$OUTPUT"
+            brew install "${TAP}/qemu@${VERSION}"
+        }
+        brew_install_version qemu 8.2.1
     - name: Manual install
       run: |
         set -eux -o pipefail
         curl -fsSL "https://github.com/lima-vm/lima/releases/download/v0.23.1/lima-0.23.1-Darwin-x86_64.tar.gz" | tar Cxzvm /usr/local
-        # make all install
         env
         qemu-system-x86_64 --version
         limactl --version
